Add auth controller, start work on user service
