# api/docs/swagger.json
@@ -9,11 +9,64 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Checks the user data and returns a jwt token on correct login",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logs in the user",
+                "parameters": [
+                    {
+                        "description": "login details",
+                        "name": "details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PostUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/services.LoginResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Checks the user data and adds it to the repo",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Registers the user",
+                "parameters": [
+                    {
+                        "description": "register details",
+                        "name": "details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PostUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/task": {
-            "get": {
+            "post": {
                 "description": "Fetches all of the user's tasks",
                 "tags": [
-                    "tags"
+                    "Tasks"
                 ],
                 "summary": "Fetch all tasks",
                 "responses": {
@@ -44,6 +97,29 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PostUser": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "services.LoginResult": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
